# web_large_file_uploader

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_linux.sh  run.sh  test.sh
src/: apis.rs  main.rs  mime_types.rs  models.rs
statics/: index.html
