[package]
name = "web_large_file_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4.4"
actix-multipart = { version = "0.6" , features = ["derive"] }

log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opentelemetry = {version = "0.21", features = ["trace","logs","metrics"]}
actix-web-opentelemetry = "0.16"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.22"
tracing-subscriber = {version = "0.3"}
tracing-actix-web = "0.7"
rusqlite = { version = "0.30",features = ["bundled"] }
uuid = { version = "1.6",features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"
azure_core = { version = "0.19" ,features = ["enable_reqwest_rustls","hmac_rust","tokio"]}
azure_identity = { version = "0.19", features = ["enable_reqwest_rustls"] }
azure_storage = { version = "0.19" ,features = ["enable_reqwest_rustls"]}
azure_storage_blobs = { version = "0.19",features = ["enable_reqwest_rustls"] }
derive_more = "0.99"


